interop/go-to-rust/include/librust_lib.h

void free_alloc();
int fib(int);
int divide(int num1, int num2);

struct UserStruct
{
  int id;
  char *name;
  char *email;

};

struct UserStruct get_request(int user_id);